# master-s-thesis

./: README.md
pracownia_badawcza/: CMakeLists.txt  package.xml  setup.py
pracownia_badawcza/include/pracownia_badawcza/: local_plan.hpp  ompl_lib.hpp  planner.hpp  points.hpp
pracownia_badawcza/launch/: local_plan.launch  map.launch  planner.launch
pracownia_badawcza/maps/: map1.yaml  map2.yaml  map3.yaml  map4.yaml  map5.yaml  map_white_big.yaml  map_white_small.yaml
pracownia_badawcza/rviz/: ompl.rviz  ompl_local.rviz  ompl_old.rviz
pracownia_badawcza/src/: add_two_ints_server.py  local_neural_planner.py  local_plan.cpp  map_node.cpp  neural_planner.py  ompl_lib.cpp  points.cpp
pracownia_badawcza/src/python_neural_pkg/models/: planner.py
pracownia_badawcza/src/python_neural_pkg/utils/: crucial_points.py  test.py
pracownia_badawcza/srv/: AddTwoInts.srv  LNP.srv
