<?xml version="1.0"?>
<package format="2">
  <name>pracownia_badawcza</name>
  <version>0.0.0</version>
  <description>The pracownia_badawcza package</description>
  <maintainer email="karol@todo.todo">karol</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>message_filters</depend>
  <depend>map_server</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>ompl</depend>
  <depend>trajectory_msgs</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>





  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
